--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,62 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import-normalize;
+
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  font-family: sans-serif;
+  background-color: #fafafa;
+  margin: 0;
+}
+
+input[type="text"] {
+  display: block;
+  width: 100%;
+  margin-left: 0.5rem;
+  padding: 0.75rem;
+  border: thin solid #dedede;
+  border-radius: 0.25rem;
+  font-size: 1rem;
+  outline: none;
+  background-color: transparent;
+}
+
+button,
+input[type="submit"],
+input[type="reset"] {
+  display: inline-block;
+  padding: 0.6rem 1rem;
+  border: none;
+  border-radius: 0.25rem;
+  font-size: 1rem;
+  font-weight: 500;
+  text-decoration: none;
+  box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.15);
+}
+
+@media screen and (min-width: 1024px) {
+  button,
+  input[type="submit"],
+  input[type="reset"] {
+    cursor: pointer;
+  }
+}
+
+/* ----------------------
+        LAYOUT
+-----------------------*/
+
+@media screen and (min-width: 1024px) {
+  .grid-1-2 {
+    max-width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: start;
+    gap: 2rem;
+  }
 }
